feat: event update

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 <div class="item-content">
                                     <div class="img-header">
                                         <a class="pattern" href="#">
-                                            <img src="https://html.themesawesome.com/dugemhtml/img/event-img.png" alt="event-img">
+                                            <img src="img/event-img.png" alt="event-img">
                                         </a>
                                     </div>
                                 </div>
