feat: update thaimv

--- a/index.html
+++ b/index.html
@@ -308,6 +308,26 @@
                                     &nbsp;
                                 </td>
                             </tr>
+                            <tr>
+                                <td class="event-date">07/11/2022</td>
+                                <td class="event-thumb">
+                                    <a href="single-event.html">
+                                        <img width="70" height="100" src="img/thaimv-deptrai.jpg" alt="table-5"> 
+                                    </a>
+                                </td>
+                                <td class="event-artist">Thái Đẹp Trai</td>
+                                <td class="event-title">
+                                    <a href="single-event.html">Fan meeting</a>
+                                </td>
+                                <td class="event-ticket-link">
+                                    <span class="sold ">SOLD OUT</span>
+                                </td>
+                            </tr>
+                            <tr class="space">
+                                <td>
+                                    &nbsp;
+                                </td>
+                            </tr>
                         </table>
                         <div class="event-mobile">
                             <ul class="event-list">
@@ -360,7 +380,8 @@
                                     <p><span>Artist :</span> <a href="#">Underground Music</a></p>
                                     <p><span>Event :</span> <a href="#">EDM</a></p>
                                     <p>
-                                        <span class="sold">TICKET SOLD OUT</span> </p>
+                                        <span class="sold">TICKET SOLD OUT</span> 
+                                    </p>
                                 </li>
                                 <li>
                                     <span class="img-thumb">
