--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="image-background">
                     </div>
                     <div class="image-title">
-                        <p>Rap Việt Mùa 3</p>
+                        <p>Đại Lễ SUPER SALE</p>
                         <p></p>
                         <a href="#" class="button-basic-1" data-aos="fade-up">All Events</a>
                     </div>
